# osm2django

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  codequality.yaml  release.yml
docs/: api.md  architecture.md
examples/minimal_import/: Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
examples/minimal_import/project/: settings.py
osmflex/: __init__.py  admin.py  apps.py  helpers.py  import_script.py  models.py  utils.py
osmflex/management/commands/: import_from_pgosmflex.py  run_osm2pgsql.py
osmflex/migrations/: 0001_initial.py  0002_alter_amenityline_city_alter_amenityline_geom_and_more.py
tests/: test_admin.py  test_management.py  test_models.py  test_settings.py  test_truncate_sql.py  test_upsert_sql.py  tests.py  urls.py
