[project]
name = "osmflex"
version = "0.3.0"
description = "Import OpenStreetMap data into Django using osm2pgsql (flex output)"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Joshua Brooks", email = "josh.vdbroek@gmail.com" }
]
dependencies = [
    "Django>=5.2,<6.0",
]

[project.urls]
Homepage = "https://github.com/catalpainternational/osm2django"
Repository = "https://github.com/catalpainternational/osm2django"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov>=4.1",
    "ruff",
    "mypy",
    "django-stubs>=5.2",
    "types-psycopg2",
    "pre-commit",
    "django-extensions",
    "psycopg2-binary>=2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["osmflex"]

[tool.ruff]
line-length = 180
target-version = "py311"
exclude = ["migrations", ".venv", "env"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line-length (handled by formatter)
    "E203",  # whitespace before ':'
    "UP042", # str+Enum vs StrEnum
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
exclude = ["migrations/", "\\.venv/"]

[tool.django-stubs]
django_settings_module = "tests.test_settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--reuse-db"

[tool.coverage.run]
source = ["osmflex"]
omit = ["*/migrations/*", "*/tests.py", "tests/*"]
